--- a/myvenv/backend/News_aggregator/templates/News_aggregator/homepage.html
+++ b/myvenv/backend/News_aggregator/templates/News_aggregator/homepage.html
@@ -218,4 +218,20 @@
         </div>
    </div> 
 </body>
+    <footer class="page-footer">
+    <hr>
+         <center> <h1 class="white-text">THANK YOU FOR VISITING OUR PAGE!</h1></center>
+    <div class="footer-copyright">
+      <div class="container">
+        <h2>CREDITS:</h2>
+        <h2>
+        https://www.bbc.com/news<br>
+        https://abcnews.go.com/International<br>
+        https://edition.cnn.com/entertainment<br>
+        https://www.firstpost.com/category/sports<br>
+        https://www.bbc.co.uk<br>
+        </h2>
+      </div>
+    </div>
+  </footer>
 </html>
