Updated Homepage in credits section

--- a/myvenv/backend/News_aggregator/templates/News_aggregator/homepage.html
+++ b/myvenv/backend/News_aggregator/templates/News_aggregator/homepage.html
@@ -225,11 +225,7 @@
       <div class="container">
         <h2>CREDITS:</h2>
         <h2>
-        https://www.bbc.com/news<br>
-        https://abcnews.go.com/International<br>
-        https://edition.cnn.com/entertainment<br>
-        https://www.firstpost.com/category/sports<br>
-        https://www.bbc.co.uk<br>
+        NEWS API
         </h2>
       </div>
     </div>
